2008-09-20  Ethan Merritt  <merritt@u.washington.edu>

	* src/gadgets.c (clip_line): Make sure that the clipped line segment
	returned by clip_line() has the same direction as the original segment.
	A simple draw command doesn't care, but if the segments are used to
	bound a filled polygon then a reversed segment causes fill artifacts.

2008-09-15  Ethan Merritt  <merritt@u.washington.edu>

	* src/save.c: There is a parsing bug for the new "set view equal_axes"
	option, triggered by the save format.  Omit this option from "save"
	until the parsing bug is fixed.

	* src/term_api.h src/term.c (write_multiline):
	Remove discontinuity in text rotation at "rotate by 90".
	Text option "rotate" continues to work as it always has, but
	"rotate by 90" is no longer a synonym meriting a special case.

2008-09-13  Ethan Merritt  <merritt@u.washington.edu>

	* term/emf.trm:  Add support for enhanced text mode.
	Clean up polygon code.

2008-09-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc term/emf.trm:  Fix typos

2008-09-10  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (place_labels3d):  Clip "splot with labels" against
	plot boundaries in "set view map" mode, for consistency with 2D plots.

	* configure.in term/cairo.trm src/syscfg.h:  glib.h provides a 
	guaranteed 32-bit data type, and cairo.trm already depends on GLib.
	Therefore we can use guint32 rather than defining our own type.

2008-09-09  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in src/syscfg.h:  Try to discover and define a safe 32-bit
	data type GP_UINT32_T.

	* term/cairo.trm:
	Fix cairopng_do_crop to use GP_UINT32_T, and bail out cleanly if it was
	not defined correctly.
	Terminal options were overwriting each other in the options string.
	Handle cropping of images with transparent background.

2008-09-08  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/graph3d.c (do_3dplot): Fixed MIN => GPMIN.

2008-09-08  Ethan Merritt  <merritt@u.washington.edu>
